# euroc_perception

./: testf
euroc_mbpe/: CMakeLists.txt  package.xml
euroc_mbpe/src/: correspondence_transform.cpp  ct_visualizer.cpp  generate_pc_model.cpp  generate_pc_model_node.cpp
euroc_mbpe/test_files/: 005x005x005-box.pcd  correctly_segmented_box.pcd  correctly_segmented_box.pcd_table_normal  correctly_segmented_handlebar.pcd  correctly_segmented_handlebar.pcd_table_normal
euroc_perception_color_recognizer/: CMakeLists.txt  package.xml
euroc_perception_color_recognizer/launch/: run_color_recognizer.launch
euroc_perception_color_recognizer/src/: color_recognizer.py  test.py
perception_utils/: CMakeLists.txt  package.xml
perception_utils/include/perception_utils/: basic_io_pcd.h  capability.hpp  cuboid.hpp  get_euroc_task_description.h  logger.h  node_status.hpp  pipeline_data.hpp  pipeline_object.hpp  point.hpp  point_cloud_operations.h  publisher_helper.h  shape.hpp  threadsafe_hull.h
perception_utils/src/: basic_io_pcd.cpp  corner_detector.cpp  cropbox_cloud.cpp  downsample_cloud.cpp  get_euroc_task_description.cpp  get_min_max_3d.cpp  logger.cpp  node_status.cpp  odom_combiner.cpp  point_cloud_operations.cpp  publisher_helper.cpp  region_growing.cpp  threadsafe_hull.cpp
pointcloud_publisher/: CMakeLists.txt  package.xml
pointcloud_publisher/include/: projector.h
pointcloud_publisher/include/suturo_pointcloud_publisher/: cloud_generator.h  projector.h
pointcloud_publisher/launch/: run_fast_pointcloud_publisher.launch  run_pointcloud_publisher.launch
pointcloud_publisher/src/: cloud_generator.cpp  projector.cpp  publish_conveyor_pointcloud.cpp  publish_gripper_cloud.cpp  publish_pointcloud.cpp  publish_scene_cloud.cpp  publish_table_pointcloud.cpp
suturo_perception_cad_recognition/: CMakeLists.txt  create_debugging_info.bash  package.xml
suturo_perception_cad_recognition/src/: IA_centroid.cpp  IA_method.cpp  IA_minmax.cpp  cad_recognition.cpp  convert_ply_to_pcd.cpp  generate_pc_model.cpp  generate_pc_model_node.cpp  icp_fitter.cpp  model_pose_estimation.cpp  mpe_prototype.cpp  pancake_pose.cpp
suturo_perception_cad_recognition/test_data/: corny.pcd  corny.ply  corny_model.pcd  haakebeckbottle.pcd  haakebeckbottle.ply  haakebeckbottle_model.pcd  pancake_fail.pcd  pancake_fail_normal.txt  pancake_mix-45deg.pcd  pancake_mix-45deg_normal.txt  pancake_mix.pcd  pancake_mix0degmoved.pcd  pancake_mix0degmoved_normal.txt  pancake_mix45deg.pcd  pancake_mix45deg_normal.txt  pancake_mix_model.pcd  pancake_mix_normal.txt  pancake_mix_points.ply  pringles.pcd  pringles_model.pcd
suturo_perception_cad_recognition/tests/: tests.cpp
suturo_perception_centroid_calc/: CMakeLists.txt  package.xml
suturo_perception_centroid_calc/include/suturo_perception_centroid_calc/: centroid_calc.h
suturo_perception_centroid_calc/src/: centroid_calc.cpp
suturo_perception_classification/: CMakeLists.txt  package.xml
suturo_perception_classification/include/suturo_perception_classification/: task6_classification.hpp
suturo_perception_classification/src/: task6_classification.cpp
suturo_perception_classifier/: CMakeLists.txt  package.xml  setup.py
suturo_perception_classifier/launch/: run_object_classifier.launch
suturo_perception_classifier/scripts/: classifier.py  classifier_scene.py  client.py  client_scene.py  obstacle_classifier.py  obstacle_client.py  obstacle_scene.py
suturo_perception_color_analysis/: CMakeLists.txt  package.xml
suturo_perception_color_analysis/include/suturo_perception_color_analysis/: color_analysis.h
suturo_perception_color_analysis/src/: color_analysis.cpp
suturo_perception_color_analysis/test/: test.cpp
suturo_perception_dqn_train/: CMakeLists.txt  package.xml
suturo_perception_dqn_train/src/: puzzle_pcd_gen.cpp
suturo_perception_gripper_node/: CMakeLists.txt  package.xml
suturo_perception_gripper_node/cfg/: SuturoPerception.cfg
suturo_perception_gripper_node/launch/: run_gripper_node.launch
suturo_perception_gripper_node/src/: gripper_client.cpp  main.cpp  suturo_gripper_node.cpp  suturo_gripper_node.h
suturo_perception_height_calculation/: CMakeLists.txt  package.xml
suturo_perception_height_calculation/include/suturo_perception_height_calculation/: height_calculation.h
suturo_perception_height_calculation/src/: height_calculation.cpp
suturo_perception_match_cuboid/: CMakeLists.txt  README  package.xml
suturo_perception_match_cuboid/src/: cuboid_matcher.cpp  detected_plane.cpp  main.cpp  match_cuboid.cpp  mc_visualizer.cpp
suturo_perception_mbpe/: CMakeLists.txt  package.xml
suturo_perception_node/: CMakeLists.txt  cfg2cpp.sh  package.xml
suturo_perception_pipeline/: CMakeLists.txt  package.xml
suturo_perception_pipeline/include/suturo_perception_pipeline/: pipeline.h
suturo_perception_pipeline/src/: pipeline.cpp
suturo_perception_scene_node/: CMakeLists.txt  package.xml
suturo_perception_scene_node/launch/: run_scene_node.launch
suturo_perception_scene_node/src/: main.cpp  scene_client.cpp  suturo_scene_node.cpp  suturo_scene_node.h
suturo_perception_segmentation/: CMakeLists.txt  package.xml
suturo_perception_segmentation/include/suturo_perception_segmentation/: projection_segmenter.h  segmenter.h  task4_segmenter.h  task6_segmenter.h
suturo_perception_segmentation/src/: projection_segmenter.cpp  segmenter.cpp  task4_segmenter.cpp  task6_segmenter.cpp
suturo_perception_shape_detection/: CMakeLists.txt  README  package.xml
suturo_perception_shape_detection/include/suturo_perception_shape_detection/: shape_detector.h
suturo_perception_shape_detection/src/: shape_detector.cpp
table_from_depth_img/: .package.xml.swp  CMakeLists.txt  package.xml
table_from_depth_img/launch/: table_extract.launch  table_extract_debug.launch
table_from_depth_img/src/: calc_pc_from_img_and_depth.cpp  calc_pc_from_img_and_depth_annex_approved.cpp  main.cpp  table_client.cpp  table_from_depth_img_node.cpp  table_from_depth_img_node.h
tf_test/: CMakeLists.txt  package.xml
tf_test/src/: main.cpp
(+56 files in other folders)
