<package>
    <name>suturo_perception_shape_detection</name>
    <version>0.0.1</version>
    <description>
        Simple shape detection from pointclouds.
        The three shapes that can be detected are cylinder, sphere and box.
        The box is found using two perpendicular planes.
    </description>
    <maintainer email="ofenrohr@tzi.de">Tom Vincent Peters</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>perception_utils</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>libpcl-all</run_depend>
    <run_depend>perception_utils</run_depend>
</package>
